- 18/07/2021 - indimail-mta-2.13
- 20/07/2021
35. updated configure.ac by doing autoupdate
- 28/08/2021
36. dkimsign.cpp: added ReplaceSelector to replace selector
37. dkimfuncs.cpp - added DKIMSignReplaceSelector to replace selector
38. dkim.h: Added prototype for DKIMSignReplaceSelector
- 12/09/2021 - indimail-mta-2.14.0
- 18/05/2022 - indimail-mta-3.0.0
- 08/09/2022 - indimail-mta-3.0.1

*
----------------------
1.0.21 
----------------------
  o updated verifier to latest draft of DKIM ADSP
  o fixed some error codes overlapping success codes
  o added signature and identity domain information to 
    DKIMVerifyDetails structure

-------------------
1.0.20 Aug 26, 2008
-------------------
  o verifier by default requires all From headers in the
    message to be signed

-------------------
1.0.19 May 12, 2008
-------------------
  o fix to trailing lines of whitespace not being ignored
    with relaxed body canonicalization

----------------------
1.0.18 January 9, 2008
----------------------
  o fix to incorrect body hashes for empty bodies
  o fix to verification error for signatures with whitespace
    around the b= value
  o more fixes to verification errors with whitespace between
    the header name and :

-----------------------
1.0.17 October 29, 2007
-----------------------
  o verifier fully supports g= value wildcard matching
  o fix to verifier not canonicalizing message headers that
    had whitespace between the header name and :
  o fix to verifier not validating t= value or comparing it
    to the x= value
  o fix to verifier accepting blank values for l= and x=

----------------------
1.0.16 August 22, 2007
----------------------
  o supports SSP (Sender Signing Practices) draft 00
  o added verifier option to save canonicalized message data

-------------------
1.0.15 May 30, 2007
-------------------
  o fix to DKIM_FAIL being returned for messages with
    invalid signatures

---------------------
1.0.14 April 24, 2007
---------------------